# prompt-yourself

./: .env.test  .gitignore  AGENTS.md  Cargo.toml  README.md  claude.sh  eslint.config.js  index.js  notes.md  package-lock.json  package.json  pi.sh  sample.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: journal.rs  main.rs
core/: Cargo.toml
core-wasm/: Cargo.toml
core-wasm/src/: lib.rs  quest_repository.rs  reentry_guard.rs  timeline_repository.rs
core/resources/: system-prompt.md
core/src/: client.rs  lib.rs  openai.rs  yaml_producer.rs
core/src/api/: chat.rs  mod.rs
core/src/domain/: mod.rs
core/src/domain/entities/: game.rs
core/src/domain/ports/: journal.rs  mod.rs  openai.rs  quest_repository.rs  timeline_repository.rs
core/src/domain/tools/: mod.rs
core/src/infrastructure/: in_memory_quest_repo.rs  in_memory_timeline_repo.rs  mod.rs  openai.rs
ios-app/: .gitignore  AGENTS.md  CONCEPT.md  CROSS_COMPILE.md  PLAN-summary-versioning.md  Package.swift  README.md
ios-app/HeartlabsEcho/: CalendarView.swift  CalendarViewModel.swift  ChatMessage.swift  ChatViewModel.swift  ContentView.swift  ConversationService.swift  DreamView.swift  DreamViewModel.swift  HeartlabsEchoApp.swift  Info.plist  LLMConfigs.swift.template  LLMService.swift  LifeTreeModels.swift  ModelRouter.swift  Models.swift  SpeechRecognizer.swift  SummaryService.swift  Theme.swift  TreeRenderer.swift  TreeScoreService.swift  TreeView.swift  TreeViewModel.swift  anchors.json  dream-system-prompt.md  leaf_stems.json  system-prompt.md
ios-app/HeartlabsEcho.xcodeproj/: project.pbxproj
ios-app/PromptYourself/: ChatMessage.swift  ContentView.swift  Info.plist  PromptYourselfApp.swift  SpeechRecognizer.swift  Theme.swift  llm-config.plist.template
ios-app/PromptYourself.xcodeproj/: project.pbxproj
ios-app/tree-pipeline/: README.md  key_magenta.py  make_anchors.py  normalize_sprites.py  render_tree.py  requirements.txt  treelib.py
obsidian-plugin/: LICENSE  README.md  build.js  manifest-beta.json  manifest.json  package-lock.json  package.json  styles.css  versions.json
obsidian-plugin/src/: fonts.css  main.js  manifest.json  styles.css
plans/: core-ios-integration.md
sandbox/: Dockerfile  entrypoint.sh  run.sh
scripts/: build-plugin.sh  release.sh
src/cli/: api.js  index.js
src/shared/: api.js  (+2 more)
(+33 files in other folders)
