[package]
name = "prompt-yourself-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
prompt-yourself-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = "0.4"
