[package]
name = "prompt-yourself-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

[dependencies.async-openai-wasm]
version = "0.31"
default-features = false
features = ["chat-completion-types", "chat-completion"]

# Required to give reqwest (used by async-openai-wasm) TLS support on native targets.
# This works alongside async-openai-wasm's own reqwest features (json, stream, multipart)
# because Cargo merges features from all crates that depend on the same dep.
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]
