[package]
name = "prompt-yourself-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.async-openai-wasm]
version = "0.31"
default-features = false
features = ["chat-completion-types", "chat-completion", "rustls"]

